--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
         "ext-json": "*",
         "beberlei/doctrineextensions": "^1.2",
         "brick/math": "^0.8.12",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/doctrine-migrations-bundle": "^2.1",
+        "doctrine/orm": "^2.7",
         "fzaninotto/faker": "^1.8",
         "jms/serializer-bundle": "^3.4",
         "knplabs/knp-paginator-bundle": "^5.1",
@@ -22,6 +26,7 @@
         "liip/imagine-bundle": "^2.3",
         "nesbot/carbon": "^2.30",
         "odolbeau/phone-number-bundle": "^3.0",
+        "phpdocumentor/reflection-docblock": "^3.0|^4.0",
         "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
@@ -39,36 +44,46 @@
         "symfony/mime": "5.0.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/notifier": "5.0.*",
-        "symfony/orm-pack": "^1.0",
         "symfony/process": "5.0.*",
+        "symfony/property-access": "5.0.*",
+        "symfony/property-info": "5.0.*",
         "symfony/security-bundle": "5.0.*",
-        "symfony/serializer-pack": "1.*",
+        "symfony/serializer": "5.0.*",
         "symfony/string": "5.0.*",
         "symfony/translation": "5.0.*",
         "symfony/twig-bundle": "5.0.*",
-        "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.0.*",
         "symfony/web-link": "5.0.*",
         "symfony/webpack-encore-bundle": "^1.6",
         "symfony/yaml": "5.0.*",
         "twig/cssinliner-extra": "^3.0",
+        "twig/extra-bundle": "^2.12|^3.0",
         "twig/inky-extra": "^3.0",
-        "twig/intl-extra": "^3.0"
+        "twig/intl-extra": "^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "easycorp/easy-log-handler": "^1.0.7",
         "roave/security-advisories": "dev-master",
-        "symfony/debug-pack": "*",
+        "symfony/browser-kit": "5.0.*",
+        "symfony/css-selector": "5.0.*",
+        "symfony/debug-bundle": "5.0.*",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*"
+        "symfony/stopwatch": "5.0.*",
+        "symfony/var-dumper": "5.0.*",
+        "symfony/web-profiler-bundle": "5.0.*"
     },
     "config": {
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "ocramius/package-versions": true,
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
